# NovaEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
driver/: QuickFormat.hpp  main.cpp
driver/assets/: test.json
include/: CoreTypes.hpp  Sequencer.hpp
src/: Sequencer.cpp
